--- a/cmake/bundle/windows/resource.rc.in
+++ b/cmake/bundle/windows/resource.rc.in
@@ -1,6 +1,6 @@
 1 VERSIONINFO
- FILEVERSION ${PROJECT_VERSION_MAJOR},${PROJECT_VERSION_MINOR},${PROJECT_VERSION_PATCH},0
- PRODUCTVERSION ${PROJECT_VERSION_MAJOR},${PROJECT_VERSION_MINOR},${PROJECT_VERSION_PATCH},0
+ FILEVERSION 0,5,2024,0
+ PRODUCTVERSION 0,5,2024,0
  FILEFLAGSMASK 0x0L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
